# nomad

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  meson.build  meson.options
res/: Makefile.am  abt-dlg.ui  app-menu.ui  help-dlg.ui  imageScale-dlg.ui  imageview.ui  meson.build  name-dlg.ui  nomad-win.ui  nomad.desktop  nomad.desktop.in  nomad.gresources.xml  penl-win.ui  raw-dlg.ui  scale-dlg.ui  scan-dlg.ui  size-dlg.ui  text-dlg.ui
src/: CWiaDataCallback.cpp  CWiaDataCallback.hpp  CairoShape.cpp  CairoShape.hpp  Capture.cpp  Capture.hpp  Config.cpp  Config.hpp  EditMode.cpp  EditMode.hpp  GenericCallback.cpp  GenericCallback.hpp  ImageReader.cpp  ImageReader.hpp  LocaleContext.cpp  LocaleContext.hpp  Makefile.am  NomadApp.cpp  NomadApp.hpp  NomadTreeView.cpp  NomadTreeView.hpp  NomadWin.cpp  NomadWin.hpp  PdfExport.cpp  PdfExport.hpp  PdfFont.cpp  PdfFont.hpp  PdfImage.cpp  PdfImage.hpp  PdfPage.cpp  PdfPage.hpp  PenlWindow.cpp  PenlWindow.hpp  PicnicListWin.cpp  PicnicListWin.hpp  Preview.cpp  Preview.hpp  RawImageReader.cpp  RawImageReader.hpp  SaneScanDevice.cpp  (+45 more)
test/: Makefile.am  meson.build  raw_test.cpp  sane_test.cpp
